--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,10 @@
 on:
   workflow_dispatch:
-
-env:
-  FMR_VERSION: latest
+    inputs:
+      fmrVersion:
+        description: 'FMR version'
+        required: true
+        type: string
 
 jobs:
   build_and_push:
@@ -24,6 +26,6 @@ jobs:
         with:
           push: true
           tags: |
-            ghcr.io/yrosemacbs/fmr:${{ FMR_VERSION }}
+            ghcr.io/yrosemacbs/fmr:${{ fmrVersion }}
           build-args: |
-            "FMR_VERSION=${{ FMR_VERSION }}"
+            "FMR_VERSION=${{ fmrVersion }}"
