--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,26 +6,54 @@ on:
         required: true
         type: string
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: fmr
+
 jobs:
   build_and_push:
     name: Build and push the container
     runs-on: ubuntu-22.04
-    steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
       
-      - name: Login to GHCR
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      
+      - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io/yrosemacbs
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Build and push
+          
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5.6.1
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=${{ inputs.fmrVersion }}
+          
+          
+      - name: Build and push container image
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: |
-            ghcr.io/yrosemacbs/fmr:${{ inputs.fmrVersion }}
           build-args: |
             "FMR_VERSION=${{ inputs.fmrVersion }}"
+          context: .
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
