--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,7 @@ jobs:
           
           
       - name: Build and push container image
+        id: push
         uses: docker/build-push-action@v5
         with:
           push: true
